go/adbc/drivermgr/arrow-adbc/adbc.h

struct ArrowSchema {
  const char* format;
  const char* name;
  const char* metadata;
  int64_t flags;
  int64_t n_children;
  struct ArrowSchema** children;
  struct ArrowSchema* dictionary;
  void (*release)(struct ArrowSchema*);
  void* private_data;
};
struct ArrowArray {
  int64_t length;
  int64_t null_count;
  int64_t offset;
  int64_t n_buffers;
  int64_t n_children;
  const void** buffers;
  struct ArrowArray** children;
  struct ArrowArray* dictionary;
  void (*release)(struct ArrowArray*);
  void* private_data;
};
struct ArrowArrayStream {
  int (*get_schema)(struct ArrowArrayStream*, struct ArrowSchema* out);
  int (*get_next)(struct ArrowArrayStream*, struct ArrowArray* out);
  const char* (*get_last_error)(struct ArrowArrayStream*);
  void (*release)(struct ArrowArrayStream*);
  void* private_data;
};
#define ADBC_STATUS_OK 0
#define ADBC_STATUS_UNKNOWN 1
#define ADBC_STATUS_NOT_IMPLEMENTED 2
#define ADBC_STATUS_NOT_FOUND 3
#define ADBC_STATUS_ALREADY_EXISTS 4
#define ADBC_STATUS_INVALID_ARGUMENT 5
#define ADBC_STATUS_INVALID_STATE 6
#define ADBC_STATUS_INVALID_DATA 7
#define ADBC_STATUS_INTEGRITY 8
#define ADBC_STATUS_INTERNAL 9
#define ADBC_STATUS_IO 10
#define ADBC_STATUS_CANCELLED 11
#define ADBC_STATUS_TIMEOUT 12
#define ADBC_STATUS_UNAUTHENTICATED 13
#define ADBC_STATUS_UNAUTHORIZED 14
#define ADBC_ERROR_VENDOR_CODE_PRIVATE_DATA INT32_MIN
#define ADBC_VERSION_1_0_0 1000000
#define ADBC_VERSION_1_1_0 1001000
#define ADBC_OPTION_VALUE_ENABLED "true"
#define ADBC_OPTION_VALUE_DISABLED "false"
#define ADBC_OPTION_URI "uri"
#define ADBC_OPTION_USERNAME "username"
#define ADBC_OPTION_PASSWORD "password"
#define ADBC_INFO_VENDOR_NAME 0
#define ADBC_INFO_VENDOR_VERSION 1
#define ADBC_INFO_VENDOR_ARROW_VERSION 2
#define ADBC_INFO_DRIVER_NAME 100
#define ADBC_INFO_DRIVER_VERSION 101
#define ADBC_INFO_DRIVER_ARROW_VERSION 102
#define ADBC_INFO_DRIVER_ADBC_VERSION 103
#define ADBC_OBJECT_DEPTH_ALL 0
#define ADBC_OBJECT_DEPTH_CATALOGS 1
#define ADBC_OBJECT_DEPTH_DB_SCHEMAS 2
#define ADBC_OBJECT_DEPTH_TABLES 3
#define ADBC_OBJECT_DEPTH_COLUMNS ADBC_OBJECT_DEPTH_ALL
#define ADBC_STATISTIC_AVERAGE_BYTE_WIDTH_KEY 0
#define ADBC_STATISTIC_AVERAGE_BYTE_WIDTH_NAME "adbc.statistic.byte_width"
#define ADBC_STATISTIC_DISTINCT_COUNT_KEY 1
#define ADBC_STATISTIC_DISTINCT_COUNT_NAME "adbc.statistic.distinct_count"
#define ADBC_STATISTIC_MAX_BYTE_WIDTH_KEY 2
#define ADBC_STATISTIC_MAX_BYTE_WIDTH_NAME "adbc.statistic.max_byte_width"
#define ADBC_STATISTIC_MAX_VALUE_KEY 3
#define ADBC_STATISTIC_MAX_VALUE_NAME "adbc.statistic.max_value"
#define ADBC_STATISTIC_MIN_VALUE_KEY 4
#define ADBC_STATISTIC_MIN_VALUE_NAME "adbc.statistic.min_value"
#define ADBC_STATISTIC_NULL_COUNT_KEY 5
#define ADBC_STATISTIC_NULL_COUNT_NAME "adbc.statistic.null_count"
#define ADBC_STATISTIC_ROW_COUNT_KEY 6
#define ADBC_STATISTIC_ROW_COUNT_NAME "adbc.statistic.row_count"
#define ADBC_CONNECTION_OPTION_AUTOCOMMIT "adbc.connection.autocommit"
#define ADBC_CONNECTION_OPTION_READ_ONLY "adbc.connection.readonly"
#define ADBC_CONNECTION_OPTION_CURRENT_CATALOG "adbc.connection.catalog"
#define ADBC_CONNECTION_OPTION_CURRENT_DB_SCHEMA "adbc.connection.db_schema"
#define ADBC_STATEMENT_OPTION_INCREMENTAL "adbc.statement.exec.incremental"
#define ADBC_STATEMENT_OPTION_PROGRESS "adbc.statement.exec.progress"
#define ADBC_STATEMENT_OPTION_MAX_PROGRESS "adbc.statement.exec.max_progress"
#define ADBC_CONNECTION_OPTION_ISOLATION_LEVEL \
  "adbc.connection.transaction.isolation_level"
#define ADBC_OPTION_ISOLATION_LEVEL_DEFAULT \
  "adbc.connection.transaction.isolation.default"
#define ADBC_OPTION_ISOLATION_LEVEL_READ_UNCOMMITTED \
  "adbc.connection.transaction.isolation.read_uncommitted"
#define ADBC_OPTION_ISOLATION_LEVEL_READ_COMMITTED \
  "adbc.connection.transaction.isolation.read_committed"
#define ADBC_OPTION_ISOLATION_LEVEL_REPEATABLE_READ \
  "adbc.connection.transaction.isolation.repeatable_read"
#define ADBC_OPTION_ISOLATION_LEVEL_SNAPSHOT \
  "adbc.connection.transaction.isolation.snapshot"
#define ADBC_OPTION_ISOLATION_LEVEL_SERIALIZABLE \
  "adbc.connection.transaction.isolation.serializable"
#define ADBC_OPTION_ISOLATION_LEVEL_LINEARIZABLE \
  "adbc.connection.transaction.isolation.linearizable"
#define ADBC_INGEST_OPTION_TARGET_TABLE "adbc.ingest.target_table"
#define ADBC_INGEST_OPTION_MODE "adbc.ingest.mode"
#define ADBC_INGEST_OPTION_MODE_CREATE "adbc.ingest.mode.create"
#define ADBC_INGEST_OPTION_MODE_APPEND "adbc.ingest.mode.append"
#define ADBC_INGEST_OPTION_MODE_REPLACE "adbc.ingest.mode.replace"
#define ADBC_INGEST_OPTION_MODE_CREATE_APPEND "adbc.ingest.mode.create_append"