rust/bindings/adbc.rs

/* automatically generated by rust-bindgen 0.69.1 */

pub const ADBC_STATUS_OK: u32 = 0;
pub const ADBC_STATUS_UNKNOWN: u32 = 1;
pub const ADBC_STATUS_NOT_IMPLEMENTED: u32 = 2;
pub const ADBC_STATUS_NOT_FOUND: u32 = 3;
pub const ADBC_STATUS_ALREADY_EXISTS: u32 = 4;
pub const ADBC_STATUS_INVALID_ARGUMENT: u32 = 5;
pub const ADBC_STATUS_INVALID_STATE: u32 = 6;
pub const ADBC_STATUS_INVALID_DATA: u32 = 7;
pub const ADBC_STATUS_INTEGRITY: u32 = 8;
pub const ADBC_STATUS_INTERNAL: u32 = 9;
pub const ADBC_STATUS_IO: u32 = 10;
pub const ADBC_STATUS_CANCELLED: u32 = 11;
pub const ADBC_STATUS_TIMEOUT: u32 = 12;
pub const ADBC_STATUS_UNAUTHENTICATED: u32 = 13;
pub const ADBC_STATUS_UNAUTHORIZED: u32 = 14;
pub const ADBC_ERROR_VENDOR_CODE_PRIVATE_DATA: i32 = -2147483648;
pub const ADBC_VERSION_1_0_0: u32 = 1000000;
pub const ADBC_VERSION_1_1_0: u32 = 1001000;
pub const ADBC_OPTION_VALUE_ENABLED: &[u8; 5] = b"true\0";
pub const ADBC_OPTION_VALUE_DISABLED: &[u8; 6] = b"false\0";
pub const ADBC_OPTION_URI: &[u8; 4] = b"uri\0";
pub const ADBC_OPTION_USERNAME: &[u8; 9] = b"username\0";
pub const ADBC_OPTION_PASSWORD: &[u8; 9] = b"password\0";
pub const ADBC_INFO_VENDOR_NAME: u32 = 0;
pub const ADBC_INFO_VENDOR_VERSION: u32 = 1;
pub const ADBC_INFO_VENDOR_ARROW_VERSION: u32 = 2;
pub const ADBC_INFO_DRIVER_NAME: u32 = 100;
pub const ADBC_INFO_DRIVER_VERSION: u32 = 101;
pub const ADBC_INFO_DRIVER_ARROW_VERSION: u32 = 102;
pub const ADBC_INFO_DRIVER_ADBC_VERSION: u32 = 103;
pub const ADBC_OBJECT_DEPTH_ALL: u32 = 0;
pub const ADBC_OBJECT_DEPTH_CATALOGS: u32 = 1;
pub const ADBC_OBJECT_DEPTH_DB_SCHEMAS: u32 = 2;
pub const ADBC_OBJECT_DEPTH_TABLES: u32 = 3;
pub const ADBC_OBJECT_DEPTH_COLUMNS: u32 = 0;
pub const ADBC_STATISTIC_AVERAGE_BYTE_WIDTH_KEY: u32 = 0;
pub const ADBC_STATISTIC_AVERAGE_BYTE_WIDTH_NAME: &[u8; 26] = b"adbc.statistic.byte_width\0";
pub const ADBC_STATISTIC_DISTINCT_COUNT_KEY: u32 = 1;
pub const ADBC_STATISTIC_DISTINCT_COUNT_NAME: &[u8; 30] = b"adbc.statistic.distinct_count\0";
pub const ADBC_STATISTIC_MAX_BYTE_WIDTH_KEY: u32 = 2;
pub const ADBC_STATISTIC_MAX_BYTE_WIDTH_NAME: &[u8; 26] = b"adbc.statistic.byte_width\0";
pub const ADBC_STATISTIC_MAX_VALUE_KEY: u32 = 3;
pub const ADBC_STATISTIC_MAX_VALUE_NAME: &[u8; 26] = b"adbc.statistic.byte_width\0";
pub const ADBC_STATISTIC_MIN_VALUE_KEY: u32 = 4;
pub const ADBC_STATISTIC_MIN_VALUE_NAME: &[u8; 26] = b"adbc.statistic.byte_width\0";
pub const ADBC_STATISTIC_NULL_COUNT_KEY: u32 = 5;
pub const ADBC_STATISTIC_NULL_COUNT_NAME: &[u8; 26] = b"adbc.statistic.null_count\0";
pub const ADBC_STATISTIC_ROW_COUNT_KEY: u32 = 6;
pub const ADBC_STATISTIC_ROW_COUNT_NAME: &[u8; 25] = b"adbc.statistic.row_count\0";
pub const ADBC_CONNECTION_OPTION_AUTOCOMMIT: &[u8; 27] = b"adbc.connection.autocommit\0";
pub const ADBC_CONNECTION_OPTION_READ_ONLY: &[u8; 25] = b"adbc.connection.readonly\0";
pub const ADBC_CONNECTION_OPTION_CURRENT_CATALOG: &[u8; 24] = b"adbc.connection.catalog\0";
pub const ADBC_CONNECTION_OPTION_CURRENT_DB_SCHEMA: &[u8; 26] = b"adbc.connection.db_schema\0";
pub const ADBC_STATEMENT_OPTION_INCREMENTAL: &[u8; 32] = b"adbc.statement.exec.incremental\0";
pub const ADBC_STATEMENT_OPTION_PROGRESS: &[u8; 29] = b"adbc.statement.exec.progress\0";
pub const ADBC_STATEMENT_OPTION_MAX_PROGRESS: &[u8; 33] = b"adbc.statement.exec.max_progress\0";
pub const ADBC_CONNECTION_OPTION_ISOLATION_LEVEL: &[u8; 44] = b"adbc.connection.transaction.isolation_level\0";
pub const ADBC_OPTION_ISOLATION_LEVEL_DEFAULT: &[u8; 46] = b"adbc.connection.transaction.isolation.default\0";
pub const ADBC_OPTION_ISOLATION_LEVEL_READ_UNCOMMITTED: &[u8; 55] = b"adbc.connection.transaction.isolation.read_uncommitted\0";
pub const ADBC_OPTION_ISOLATION_LEVEL_READ_COMMITTED: &[u8; 53] = b"adbc.connection.transaction.isolation.read_committed\0";
pub const ADBC_OPTION_ISOLATION_LEVEL_REPEATABLE_READ: &[u8; 54] = b"adbc.connection.transaction.isolation.repeatable_read\0";
pub const ADBC_OPTION_ISOLATION_LEVEL_SNAPSHOT: &[u8; 47] = b"adbc.connection.transaction.isolation.snapshot\0";
pub const ADBC_OPTION_ISOLATION_LEVEL_SERIALIZABLE: &[u8; 51] = b"adbc.connection.transaction.isolation.serializable\0";
pub const ADBC_OPTION_ISOLATION_LEVEL_LINEARIZABLE: &[u8; 51] = b"adbc.connection.transaction.isolation.linearizable\0";
pub const ADBC_INGEST_OPTION_TARGET_TABLE: &[u8; 25] = b"adbc.ingest.target_table\0";
pub const ADBC_INGEST_OPTION_MODE: &[u8; 17] = b"adbc.ingest.mode\0";
pub const ADBC_INGEST_OPTION_MODE_CREATE: &[u8; 24] = b"adbc.ingest.mode.create\0";
pub const ADBC_INGEST_OPTION_MODE_APPEND: &[u8; 24] = b"adbc.ingest.mode.append\0";
pub const ADBC_INGEST_OPTION_MODE_REPLACE: &[u8; 25] = b"adbc.ingest.mode.replace\0";
pub const ADBC_INGEST_OPTION_MODE_CREATE_APPEND: &[u8; 31] = b"adbc.ingest.mode.create_append\0";
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ArrowSchema {
    pub format: *const ::std::os::raw::c_char,
    pub name: *const ::std::os::raw::c_char,
    pub metadata: *const ::std::os::raw::c_char,
    pub flags: i64,
    pub n_children: i64,
    pub children: *mut *mut ArrowSchema,
    pub dictionary: *mut ArrowSchema,
    pub release: ::std::option::Option<unsafe extern "C" fn(arg1: *mut ArrowSchema)>,
    pub private_data: *mut ::std::os::raw::c_void,
}
#[test]
fn bindgen_test_layout_ArrowSchema() {
    const UNINIT: ::std::mem::MaybeUninit<ArrowSchema> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ArrowSchema>(),
        72usize,
        concat!("Size of: ", stringify!(ArrowSchema)),
    );
    assert_eq!(
        ::std::mem::align_of::<ArrowSchema>(),
        8usize,
        concat!("Alignment of ", stringify!(ArrowSchema)),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).format) as usize - ptr as usize },
        0usize,
        concat!("Offset of field: ", stringify!(ArrowSchema), "::", stringify!(format)),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).name) as usize - ptr as usize },
        8usize,
        concat!("Offset of field: ", stringify!(ArrowSchema), "::", stringify!(name)),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).metadata) as usize - ptr as usize },
        16usize,
        concat!("Offset of field: ", stringify!(ArrowSchema), "::", stringify!(metadata)),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).flags) as usize - ptr as usize },
        24usize,
        concat!("Offset of field: ", stringify!(ArrowSchema), "::", stringify!(flags)),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).n_children) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(ArrowSchema),
            "::",
            stringify!(n_children),
        ),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).children) as usize - ptr as usize },
        40usize,
        concat!("Offset of field: ", stringify!(ArrowSchema), "::", stringify!(children)),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).dictionary) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(ArrowSchema),
            "::",
            stringify!(dictionary),
        ),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).release) as usize - ptr as usize },
        56usize,
        concat!("Offset of field: ", stringify!(ArrowSchema), "::", stringify!(release)),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).private_data) as usize - ptr as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(ArrowSchema),
            "::",
            stringify!(private_data),
        ),
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ArrowArray {
    pub length: i64,
    pub null_count: i64,
    pub offset: i64,
    pub n_buffers: i64,
    pub n_children: i64,
    pub buffers: *mut *const ::std::os::raw::c_void,
    pub children: *mut *mut ArrowArray,
    pub dictionary: *mut ArrowArray,
    pub release: ::std::option::Option<unsafe extern "C" fn(arg1: *mut ArrowArray)>,
    pub private_data: *mut ::std::os::raw::c_void,
}
#[test]
fn bindgen_test_layout_ArrowArray() {
    const UNINIT: ::std::mem::MaybeUninit<ArrowArray> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ArrowArray>(),
        80usize,
        concat!("Size of: ", stringify!(ArrowArray)),
    );
    assert_eq!(
        ::std::mem::align_of::<ArrowArray>(),
        8usize,
        concat!("Alignment of ", stringify!(ArrowArray)),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).length) as usize - ptr as usize },
        0usize,
        concat!("Offset of field: ", stringify!(ArrowArray), "::", stringify!(length)),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).null_count) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ArrowArray),
            "::",
            stringify!(null_count),
        ),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).offset) as usize - ptr as usize },
        16usize,
        concat!("Offset of field: ", stringify!(ArrowArray), "::", stringify!(offset)),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).n_buffers) as usize - ptr as usize },
        24usize,
        concat!("Offset of field: ", stringify!(ArrowArray), "::", stringify!(n_buffers)),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).n_children) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(ArrowArray),
            "::",
            stringify!(n_children),
        ),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).buffers) as usize - ptr as usize },
        40usize,
        concat!("Offset of field: ", stringify!(ArrowArray), "::", stringify!(buffers)),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).children) as usize - ptr as usize },
        48usize,
        concat!("Offset of field: ", stringify!(ArrowArray), "::", stringify!(children)),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).dictionary) as usize - ptr as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(ArrowArray),
            "::",
            stringify!(dictionary),
        ),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).release) as usize - ptr as usize },
        64usize,
        concat!("Offset of field: ", stringify!(ArrowArray), "::", stringify!(release)),
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).private_data) as usize - ptr as usize },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(ArrowArray),
            "::",
            stringify!(private_data),
        ),
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ArrowArrayStream {
    pub get_schema: ::std::option::Option<
        unsafe extern "C" fn(
            arg1: *mut ArrowArrayStream,
            out: *mut ArrowSchema,
        ) -> ::std::os::raw::c_int,
    >,
    pub get_next: ::std::option::Option<
        unsafe extern "C" fn(
            arg1: *mut ArrowArrayStream,
            out: *mut ArrowArray,
        ) -> ::std::os::raw::c_int,
    >,
    pub get_last_error: ::std::option::Option<
        unsafe extern "C" fn(
            arg1: *mut ArrowArrayStream,
        ) -> *const ::std::os::raw::c_char,
    >,
    pub release: ::std::option::Option<
        unsafe extern "C" fn(arg1: *mut ArrowArrayStream),
    >,
    pub private_data: *mut ::std::os::raw::c_void,
}
